welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: not found: value estSUeBiscuit
 while(estSUeBiscuit()==false){
       ^